# F.brain.LVL2

./: .env  .gitignore  README.md  ci-cd.yml  docker-compose.yml  grafana.ini  prometheus .yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.github/workflows/ci/: cd.yml
client/: Dockerfile  README.md  nginx.conf  vite.config.js
client/public/: index.html  manifest.json
client/src/: styles.css
client/src/components/: BookList.js  BorrowForm.js  Dashboard.jsx  LoginForm.js  Navbar.jsx  RegisterForm.js
client/src/pages/: App.jsx  Home.jsx  Login.jsx  Register.jsx
monitoring/: prometheus.yml
monitoring/prometheus/: prometheus.yml
proxy/: default.conf
server/: Dockerfile  manage.py  nginx.conf  pyproject.toml  requirements.txt  test_db.py  test_docker_db.py
server/myapp/: admin.py  celery.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
server/server_config/: asgi.py  base_settings.py  celery.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
