[project]
name = "f-brain-lvl2"
version = "0.1.0"
description = ""
authors = [
    {name = "MAIGA",email = "amadoumaiga7002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "f"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
