[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend Django pour la gestion de bibliothèque"
authors = ["MAIGA <amadoumaiga7002@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = ">=5.2.1,<6.0.0"
celery = ">=5.5.2,<6.0.0"
django-prometheus = ">=2.3.1,<3.0.0"
django-celery-results = ">=2.6.0,<3.0.0"
django-celery-beat = ">=2.8.1,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^23.0.0"
library = "^3.0.92"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"