[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
djangorestframework = "^3.16.0"  # Pour REST framework
django-celery-beat = "^2.5.0"
psycopg2 = "^2.9"
celery = "^5.3"
django-prometheus = "^2.3.1"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
gunicorn = "^22.0.0"
python-dotenv = "^1.1.0"
djangorestframework-simplejwt = "^5.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
djangorestframework = "^3.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
